--- a/etc/tinyproxy.conf.in
+++ b/etc/tinyproxy.conf.in
@@ -267,6 +267,23 @@ ViaProxyName "tinyproxy"
 #FilterDefaultDeny Yes
 
 #
+# Snreplace: This allows you to specify the location of the file
+# containing the search and replace expressions.
+#
+Snreplace "@pkgsysconfdir@/snreplace"
+
+#
+# SnreplaceExtended: Use POSIX Extended regular expressions rather than
+# basic.
+#
+#SnreplaceExtended On
+
+#
+# SnreplaceCaseSensitive: Use case sensitive regular expressions.
+#
+#SnreplaceCaseSensitive On
+
+#
 # Anonymous: If an Anonymous keyword is present, then anonymous proxying
 # is enabled.  The headers listed are allowed through, while all others
 # are denied. If no Anonymous keyword is present, then all headers are
